# canvodpy

./: .gitignore  .howfairis.yml  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION  CITATION.cff  CLAUDE.md  CONTRIBUTORS.md  FAIR_COMPLIANCE.md  Justfile  README.md  codemeta.json  conftest.py  data.json  index.html  myst.yml  objects.inv  pyproject.toml  search.json  sitemap.xml  verify_migration.py  zensical.toml
.github/actions/setup/: action.yml
.github/workflows/: code_quality.yml  codeql.yml  dependabot_uv_lock.yml  deploy_docs.yml  publish_pypi.yml  publish_testpypi.yml  release.yml  scorecard.yml  test_coverage.yml  test_platforms.yml
CONTRIBUTING/: index.html
FAIR_IMPLEMENTATION_SUMMARY/: index.html
FOSS_PRINCIPLES/: index.html
NAMING_REFACTOR_PLAN/: index.html
OPENSSF_BADGE_GUIDE/: index.html
RELEASING/: index.html
SECURITY/: index.html
VERSIONING/: index.html
api/canvod-audit/: index.html
api/canvod-auxiliary/: index.html
api/canvod-ops/: index.html
api/canvod-readers/: index.html
api/canvod-store/: index.html
api/canvod-store-metadata/: index.html
api/canvod-utils/: index.html
api/canvod-virtualiconvname/: index.html
api/canvod-viz/: index.html
api/canvod-vod/: index.html
api/canvodpy/: index.html
architecture/: index.html
build-system/: index.html
canvodpy/: README.md  pyproject.toml
canvodpy/src/canvodpy/: __init__.py  factories.py  fluent.py  vod_computer.py
canvodpy/src/canvodpy/orchestrator/: processor.py
canvodpy/src/canvodpy/workflows/: tasks.py
canvodpy/tests/: test_fluent_workflow.py  test_integration_sid_filtering.py  test_workflow_integration.py
dependencies/: index.html
diagrams/: 01-package-structure.mmd  02-processing-pipeline.mmd  03-dependencies.html  03-dependencies.mmd  04-vod-workflow.mmd  06-ephemeris-sources.mmd  06-software-architecture.mmd  07-api-levels.mmd  08-reproducibility.mmd  09-multi-receiver-scs.html  10-complete-logical-flow.mmd  11-naming-recipe-flow.mmd  12-preprocessing-pipeline.mmd  13-factory-extensibility.mmd  14-naming-convention.mmd
diagrams/poster/: 01-pipeline-v2.html  01-pipeline.mmd  02-architecture.mmd  04-package-structure-v2.html
diagrams/test/: 03-dependencies.mmd  05-gnss-t-methodology.mmd  08-reproducibility.mmd  render.sh
docs/: CONTRIBUTING.md  NAMING_REFACTOR_PLAN.md  OPENSSF_BADGE_GUIDE.md  RELEASING.md  SECURITY.md  THEME.md  VERSIONING.md  architecture.md  build-system.md  dependencies.md  development-workflow.md  index.md  myst-configuration.md  namespace-packages.md  principles.md  tooling.md
docs/api/: canvod-auxiliary.md  canvod-grids.md  canvod-readers.md  canvod-store.md  canvod-utils.md  canvod-viz.md  canvod-vod.md  canvodpy.md
docs/assets/: canvod-nordic.css  mermaid-init.js
docs/dependency_graphs/: README.md
docs/diagrams/: 01-package-structure.html  04-vod-workflow.html  05-gnss-t-methodology.html  06-software-architecture.html  07-factory-extensibility.html  08-reproducibility.html  10-complete-logical-flow.html  15-naming-convention.html  naming-convention-embed.html
docs/diagrams/poster/: 03-complete-flow.mmd  04-package-structure.mmd  poster.css
docs/guides/: API_REDESIGN.md  ARCHITECTURE.md  DEVELOPMENT.md  HOW_RELEASE_WORKS.md  OIDC_EXPLAINED.md  PYPI_SETUP.md  ZENODO_SETUP.md  architecture-design.md  getting-started.md
docs/notebooks/: index.md
findings/api_levels_fix_plan/: index.html
findings/api_levels_mechanisms/: index.html
findings/ephemeris_source_architecture/: index.html
findings/repo_maintenance_2026_03/: index.html
findings/rinex_vs_sbf_store_comparison/: index.html
findings/satellite_metadata_sources/: index.html
findings/tier3_canvodpy_vs_gnssvod/: index.html
guides/DEVELOPMENT/: index.html
guides/HOW_RELEASE_WORKS/: index.html
guides/OIDC_EXPLAINED/: index.html
guides/PYPI_SETUP/: index.html
guides/ZENODO_SETUP/: index.html
guides/ai-development/: index.html
guides/airflow/: index.html
guides/api-levels/: index.html
guides/architecture-design/: index.html
guides/configuration/: index.html
guides/dask-resources/: index.html
guides/diagnostics/: index.html
guides/getting-started/: index.html
htmlcov/: class_index.html  conftest_py.html  function_index.html  index.html  status.json  z_0194a80ad0b74b56___init___py.html  z_0194a80ad0b74b56_augmentation_py.html  z_0194a80ad0b74b56_container_py.html  z_0194a80ad0b74b56_pipeline_py.html  z_0194a80ad0b74b56_preprocessing_py.html  z_031ec4d9a6b7e764___init___py.html  z_031ec4d9a6b7e764__meta_py.html  z_0d4b1ccd22992d8f___init___py.html  z_0d4b1ccd22992d8f_dir_matcher_py.html  z_0d4b1ccd22992d8f_models_py.html  z_10a8d3a52d0145e1___init___py.html  z_10a8d3a52d0145e1_manager_py.html  z_10a8d3a52d0145e1_reader_py.html  z_10a8d3a52d0145e1_store_py.html  z_10a8d3a52d0145e1_viewer_py.html  z_1463a382258a175e___init___py.html  z_1463a382258a175e_interpolator_py.html  z_1463a382258a175e_matcher_py.html  z_1463a382258a175e_pipeline_py.html  z_1463a382258a175e_processor_py.html  z_1463a382258a175e_resources_py.html  z_170efa41a74f471f___init___py.html  z_170efa41a74f471f_tasks_py.html  z_22dcf1be771ab7fb___init___py.html  z_22dcf1be771ab7fb_perf_py.html  z_22dcf1be771ab7fb_telemetry_py.html  z_2394c3d39ca047fa___init___py.html  z_2394c3d39ca047fa_logger_py.html  z_2e2ca6b913a88cd1___init___py.html  z_2e2ca6b913a88cd1_catalog_py.html  z_2e2ca6b913a88cd1_config_models_py.html  z_2e2ca6b913a88cd1_convention_py.html  z_2e2ca6b913a88cd1_mapping_py.html  z_2e2ca6b913a88cd1_patterns_py.html  z_2e2ca6b913a88cd1_recipe_py.html  (+198 more)
impressum/: index.html
includes/abbreviations/: index.html
namespace-packages/: index.html
notebooks/: index.html
principles/: index.html
scripts/: generate_all_graphs.py
tooling/: index.html
