[project]
name = "canvodpy"
version = "0.3.0"
description = "Python ecosystem for GNSS-Transmissometry canopy VOD retrievals"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Nicolas François Bader", email = "nicolas.bader@tuwien.ac.at" },
]
keywords = ["GNSS", "VOD", "vegetation", "remote sensing", "geodesy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]

# Core dependencies - sub-packages from workspace
dependencies = [
    "canvod-readers",
    "canvod-auxiliary",
    "canvod-grids",
    "canvod-store",
    "canvod-store-metadata",
    "canvod-utils",
    "canvod-viz",
    "canvod-vod",
    "canvod-ops",
    "canvod-virtualiconvname",
    "matplotlib>=3.8.0",
    "pint>=0.20",
    "structlog>=23.0",
    "pydantic>=2.0",
    "tqdm>=4.65",
    "natsort>=8.0.0",
    "dask[distributed]>=2026.1.1",
    "mystmd>=1.8.0",
    "docker>=7.1.0",
    "howfairis>=0.13.0",
    "pyarrow>=23.0.1",
    "palettable>=3.3.3",
    "altair>=6.0.0",
    "tabulate>=0.10.0",
    "sqlglot>=29.0.1",
    "icechunk>=2.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.14",
    "ty>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/nfb2021/canvodpy"
Documentation = "https://nfb2021.github.io/canvodpy/"
Repository = "https://github.com/nfb2021/canvodpy"
Issues = "https://github.com/nfb2021/canvodpy/issues"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

# Workspace package sources
# This tells uv where to find the local packages
[tool.uv.sources]
canvod-readers = { workspace = true }
canvod-auxiliary = { workspace = true }
canvod-grids = { workspace = true }
canvod-store = { workspace = true }
canvod-store-metadata = { workspace = true }
canvod-utils = { workspace = true }
canvod-viz = { workspace = true }
canvod-vod = { workspace = true }
canvod-ops = { workspace = true }
canvod-virtualiconvname = { workspace = true }

[tool.ty]
extend-exclude = [
    "**/docs/*.ipynb",
    "**/docs/notebooks/*.py",
]
